parser.output
Terminals unused in grammar

   COMMENT
   ERROR
   ASSERT
   CONST
   ENUM
   GOTO
   STRICTFP
   AR
   DCLN
   ATR
   TDT


Grammar

    0 $accept: CompilationUnit $end

    1 Identifier: IDENTIFIER

    2 Literal: LITERAL

    3 Type: PrimitiveType
    4     | ReferenceType

    5 PrimitiveType: BOOLEAN
    6              | NumericType

    7 NumericType: IntegralType
    8            | FloatingPointType

    9 IntegralType: BYTE
   10             | SHORT
   11             | INT
   12             | CHAR
   13             | LONG

   14 FloatingPointType: FLOAT
   15                  | DOUBLE

   16 ReferenceType: ClassOrInterfaceType
   17              | ArrayType

   18 ClassOrInterfaceType: Name

   19 ClassType: ClassOrInterfaceType

   20 InterfaceType: ClassOrInterfaceType

   21 ArrayType: PrimitiveType LSQB RSQB
   22          | Name LSQB RSQB
   23          | ArrayType LSQB RSQB

   24 Name: SimpleName
   25     | QualifiedName

   26 SimpleName: Identifier

   27 QualifiedName: Name FST Identifier

   28 CompilationUnit: PackageDeclaration ImportDeclarationRec TypeDeclarationRec
   29                | ImportDeclarationRec TypeDeclarationRec
   30                | PackageDeclaration TypeDeclarationRec
   31                | TypeDeclarationRec
   32                | PackageDeclaration ImportDeclarationRec
   33                | ImportDeclarationRec
   34                | PackageDeclaration
   35                | %empty

   36 ImportDeclarationRec: ImportDeclaration
   37                     | ImportDeclarationRec ImportDeclaration

   38 TypeDeclarationRec: TypeDeclaration
   39                   | TypeDeclarationRec TypeDeclaration

   40 PackageDeclaration: PACKAGE Name SCLN

   41 ImportDeclaration: SingleTypeImportDeclaration
   42                  | TypeImportOnDemandDeclaration

   43 SingleTypeImportDeclaration: IMPORT Name SCLN

   44 TypeImportOnDemandDeclaration: IMPORT Name DST SCLN

   45 TypeDeclaration: ClassDeclaration
   46                | InterfaceDeclaration
   47                | SCLN

   48 Modifiers: Modifier
   49          | Modifiers Modifier

   50 Modifier: PUBLIC
   51         | PROTECTED
   52         | PRIVATE
   53         | STATIC
   54         | ABSTRACT
   55         | FINAL
   56         | NATIVE
   57         | SYNCHRONIZED
   58         | TRANSIENT
   59         | VOLATILE

   60 ClassDeclaration: Modifiers CLASS Identifier Super Interfaces ClassBody
   61                 | CLASS Identifier Super Interfaces ClassBody
   62                 | Modifiers CLASS Identifier Interfaces ClassBody
   63                 | CLASS Identifier Interfaces ClassBody
   64                 | Modifiers CLASS Identifier Super ClassBody
   65                 | CLASS Identifier Super ClassBody
   66                 | Modifiers CLASS Identifier ClassBody
   67                 | CLASS Identifier ClassBody

   68 Super: EXTENDS ClassType

   69 Interfaces: IMPLEMENTS InterfaceTypeList

   70 InterfaceTypeList: InterfaceType
   71                  | InterfaceTypeList CMA InterfaceType

   72 ClassBody: LCB RCB
   73          | LCB ClassBodyDeclarationRec RCB

   74 ClassBodyDeclarationRec: ClassBodyDeclaration
   75                        | ClassBodyDeclarationRec ClassBodyDeclaration

   76 ClassBodyDeclaration: ClassMemberDeclaration
   77                     | StaticInitializer
   78                     | ConstructorDeclaration

   79 ClassMemberDeclaration: FieldDeclaration
   80                       | MethodDeclaration

   81 FieldDeclaration: Modifiers Type VariableDeclarators SCLN
   82                 | Type VariableDeclarators SCLN

   83 VariableDeclarators: VariableDeclarator
   84                    | VariableDeclarators CMA VariableDeclarator

   85 VariableDeclarator: VariableDeclaratorId
   86                   | VariableDeclaratorId ET VariableInitializer

   87 VariableDeclaratorId: Identifier
   88                     | VariableDeclaratorId LSQB RSQB

   89 VariableInitializer: Expression
   90                    | ArrayInitializer

   91 MethodDeclaration: MethodHeader MethodBody

   92 MethodHeader: Modifiers Type MethodDeclarator Throws
   93             | Type MethodDeclarator Throws
   94             | Modifiers Type MethodDeclarator
   95             | Type MethodDeclarator
   96             | Modifiers VOID MethodDeclarator Throws
   97             | VOID MethodDeclarator Throws
   98             | Modifiers VOID MethodDeclarator
   99             | VOID MethodDeclarator

  100 MethodDeclarator: Identifier LSMB FormalParameterList RSMB
  101                 | Identifier LSMB RSMB
  102                 | MethodDeclarator LSQB LSQB

  103 FormalParameterList: FormalParameter
  104                    | FormalParameterList CMA FormalParameter

  105 FormalParameter: Type VariableDeclaratorId

  106 Throws: THROWS ClassTypeList

  107 ClassTypeList: ClassType
  108              | ClassTypeList CMA ClassType

  109 MethodBody: Block
  110           | SCLN

  111 StaticInitializer: STATIC Block

  112 ConstructorDeclaration: Modifiers ConstructorDeclarator Throws ConstructorBody
  113                       | ConstructorDeclarator Throws ConstructorBody
  114                       | Modifiers ConstructorDeclarator ConstructorBody
  115                       | ConstructorDeclarator ConstructorBody

  116 ConstructorDeclarator: SimpleName LSMB FormalParameterList RSMB
  117                      | SimpleName LSMB RSMB

  118 ConstructorBody: LCB ExplicitConstructorInvocation BlockStatements RCB
  119                | LCB BlockStatements RCB
  120                | LCB ExplicitConstructorInvocation RCB
  121                | LCB RCB

  122 ExplicitConstructorInvocation: THIS LSMB ArgumentList RSMB SCLN
  123                              | THIS LSMB RSMB SCLN
  124                              | SUPER LSMB ArgumentList RSMB SCLN
  125                              | SUPER LSMB RSMB SCLN

  126 InterfaceDeclaration: Modifiers INTERFACE Identifier ExtendsInterfaces InterfaceBody
  127                     | INTERFACE Identifier ExtendsInterfaces InterfaceBody
  128                     | Modifiers INTERFACE Identifier InterfaceBody
  129                     | INTERFACE Identifier InterfaceBody

  130 ExtendsInterfaces: EXTENDS InterfaceType
  131                  | ExtendsInterfaces CMA InterfaceType

  132 InterfaceBody: LCB InterfaceMemberDeclarationRec RCB
  133              | LCB RCB

  134 InterfaceMemberDeclarationRec: InterfaceMemberDeclaration
  135                              | InterfaceMemberDeclarationRec InterfaceMemberDeclaration

  136 InterfaceMemberDeclaration: ConstantDeclaration
  137                           | AbstractMethodDeclaration

  138 ConstantDeclaration: FieldDeclaration

  139 AbstractMethodDeclaration: MethodHeader SCLN

  140 ArrayInitializer: LCB VariableInitializerList CMA RCB
  141                 | LCB CMA RCB
  142                 | LCB VariableInitializerList RCB
  143                 | LCB RCB

  144 VariableInitializerList: VariableInitializerList CMA VariableInitializer
  145                        | VariableInitializer

  146 Block: LCB BlockStatements RCB
  147      | LCB RCB

  148 BlockStatements: BlockStatements BlockStatement
  149                | BlockStatement

  150 BlockStatement: LocalVariableDeclarationStatement
  151               | Statement

  152 LocalVariableDeclarationStatement: LocalVariableDeclaration SCLN

  153 LocalVariableDeclaration: Type VariableDeclarators

  154 Statement: StatementWithoutTrailingSubstatement
  155          | LabeledStatement
  156          | IfThenStatement
  157          | IfThenElseStatement
  158          | WhileStatement
  159          | ForStatement

  160 StatementNoShortIf: StatementWithoutTrailingSubstatement
  161                   | LabeledStatementNoShortIf
  162                   | IfThenElseStatementNoShortIf
  163                   | WhileStatementNoShortIf
  164                   | ForStatementNoShortIf

  165 StatementWithoutTrailingSubstatement: Block
  166                                     | EmptyStatement
  167                                     | ExpressionStatement
  168                                     | SwitchStatement
  169                                     | DoStatement
  170                                     | BreakStatement
  171                                     | ContinueStatement
  172                                     | ReturnStatement
  173                                     | SynchronizedStatement
  174                                     | ThrowStatement
  175                                     | TryStatement

  176 EmptyStatement: SCLN

  177 LabeledStatement: Identifier COLON Statement

  178 LabeledStatementNoShortIf: Identifier COLON StatementNoShortIf

  179 ExpressionStatement: StatementExpression SCLN

  180 StatementExpression: Assignment
  181                    | PreIncrementExpression
  182                    | PreDecrementExpression
  183                    | PostIncrementExpression
  184                    | PostDecrementExpression
  185                    | MethodInvocation
  186                    | ClassInstanceCreationExpression

  187 IfThenStatement: IF LSMB Expression RSMB Statement

  188 IfThenElseStatement: IF LSMB Expression RSMB StatementNoShortIf ELSE Statement

  189 IfThenElseStatementNoShortIf: IF LSMB Expression RSMB StatementNoShortIf ELSE StatementNoShortIf

  190 SwitchStatement: SWITCH LSMB Expression RSMB SwitchBlock

  191 SwitchBlock: LCB SwitchBlockStatementGroups SwitchLabels RCB
  192            | LCB SwitchLabels RCB
  193            | LCB SwitchBlockStatementGroups RCB
  194            | LCB RCB

  195 SwitchBlockStatementGroups: SwitchBlockStatementGroup
  196                           | SwitchBlockStatementGroups SwitchBlockStatementGroup

  197 SwitchLabels: SwitchLabel
  198             | SwitchLabels SwitchLabel

  199 SwitchBlockStatementGroup: SwitchLabels BlockStatements

  200 SwitchLabel: CASE ConstantExpression COLON
  201            | DEFAULT COLON

  202 WhileStatement: WHILE LSMB Expression RSMB Statement

  203 WhileStatementNoShortIf: WHILE LSMB Expression RSMB StatementNoShortIf

  204 DoStatement: DO Statement WHILE LSMB Expression RSMB SCLN

  205 ForStatement: BasicForStatement

  206 ForStatementNoShortIf: BasicForStatementNoShortIf

  207 BasicForStatement: FOR LSMB ForInit SCLN Expression SCLN ForUpdate RSMB Statement
  208                  | FOR LSMB SCLN Expression SCLN ForUpdate RSMB Statement
  209                  | FOR LSMB ForInit SCLN SCLN ForUpdate RSMB Statement
  210                  | FOR LSMB SCLN SCLN ForUpdate RSMB Statement
  211                  | FOR LSMB ForInit SCLN Expression SCLN RSMB Statement
  212                  | FOR LSMB SCLN Expression SCLN RSMB Statement
  213                  | FOR LSMB ForInit SCLN SCLN RSMB Statement
  214                  | FOR LSMB SCLN SCLN RSMB Statement

  215 BasicForStatementNoShortIf: FOR LSMB ForInit SCLN Expression SCLN ForUpdate RSMB StatementNoShortIf
  216                           | FOR LSMB SCLN Expression SCLN ForUpdate RSMB StatementNoShortIf
  217                           | FOR LSMB ForInit SCLN SCLN ForUpdate RSMB StatementNoShortIf
  218                           | FOR LSMB SCLN SCLN ForUpdate RSMB StatementNoShortIf
  219                           | FOR LSMB ForInit SCLN Expression SCLN RSMB StatementNoShortIf
  220                           | FOR LSMB SCLN Expression SCLN RSMB StatementNoShortIf
  221                           | FOR LSMB ForInit SCLN SCLN RSMB StatementNoShortIf
  222                           | FOR LSMB SCLN SCLN RSMB StatementNoShortIf

  223 ForInit: StatementExpressionList
  224        | LocalVariableDeclaration

  225 ForUpdate: StatementExpressionList

  226 StatementExpressionList: StatementExpressionList CMA StatementExpression
  227                        | StatementExpression

  228 BreakStatement: BREAK Identifier SCLN
  229               | BREAK SCLN

  230 ContinueStatement: CONTINUE Identifier SCLN
  231                  | CONTINUE SCLN

  232 ReturnStatement: RETURN SCLN
  233                | RETURN Expression SCLN

  234 ThrowStatement: THROW Expression SCLN

  235 SynchronizedStatement: SYNCHRONIZED LSMB Expression RSMB Block

  236 TryStatement: TRY Block Catches
  237             | TRY Block Finally
  238             | TRY Block Catches Finally

  239 Catches: Catches CatchClause
  240        | CatchClause

  241 CatchClause: CATCH LSMB FormalParameter RSMB Block

  242 Finally: FINALLY Block

  243 Primary: PrimaryNoNewArray
  244        | ArrayCreationExpression

  245 PrimaryNoNewArray: Literal
  246                  | THIS
  247                  | LSMB Expression RSMB
  248                  | ClassInstanceCreationExpression
  249                  | FieldAccess
  250                  | ArrayAccess
  251                  | MethodInvocation

  252 ClassInstanceCreationExpression: NEW ClassType LSMB ArgumentList RSMB
  253                                | NEW ClassType LSMB RSMB

  254 ArgumentList: Expression
  255             | ArgumentList CMA Expression

  256 FieldAccess: Primary FST Identifier
  257            | SUPER FST Identifier

  258 ArrayAccess: Name LSQB Expression RSQB
  259            | PrimaryNoNewArray LSQB Expression RSQB

  260 MethodInvocation: Name LSMB ArgumentList RSMB
  261                 | Name LSMB RSMB
  262                 | Primary FST Identifier LSMB ArgumentList RSMB
  263                 | Primary FST Identifier LSMB RSMB
  264                 | SUPER FST Identifier LSMB ArgumentList RSMB
  265                 | SUPER FST Identifier LSMB RSMB

  266 ArrayCreationExpression: NEW PrimitiveType DimExprs Dims
  267                        | NEW PrimitiveType DimExprs
  268                        | NEW ClassOrInterfaceType DimExprs Dims
  269                        | NEW ClassOrInterfaceType DimExprs

  270 DimExprs: DimExprs DimExpr
  271         | DimExpr

  272 DimExpr: LSQB Expression RSQB

  273 Dims: LSQB RSQB
  274     | Dims LSQB RSQB

  275 Expression: AssignmentExpression

  276 AssignmentExpression: ConditionalExpression
  277                     | Assignment

  278 Assignment: LeftHandSide AssignmentOperator Expression

  279 LeftHandSide: Name
  280             | FieldAccess
  281             | ArrayAccess

  282 AssignmentOperator: ET
  283                   | MULEQ
  284                   | DIVEQ
  285                   | MODEQ
  286                   | PLEQ
  287                   | SBEQ
  288                   | DLRLR
  289                   | DGRGR
  290                   | TGRGRGR
  291                   | ANDEQ
  292                   | POWEQ
  293                   | OREQ

  294 ConditionalExpression: ConditionalOrExpression
  295                      | ConditionalOrExpression QM Expression COLON ConditionalExpression

  296 ConditionalOrExpression: ConditionalAndExpression
  297                        | ConditionalOrExpression OR ConditionalAndExpression

  298 ConditionalAndExpression: InclusiveOrExpression
  299                         | ConditionalAndExpression AND InclusiveOrExpression

  300 InclusiveOrExpression: ExclusiveOrExpression
  301                      | InclusiveOrExpression BOR ExclusiveOrExpression

  302 ExclusiveOrExpression: AndExpression
  303                      | ExclusiveOrExpression POW AndExpression

  304 AndExpression: EqualityExpression
  305              | AndExpression BAND EqualityExpression

  306 EqualityExpression: RelationalExpression
  307                   | EqualityExpression EQEQ RelationalExpression
  308                   | EqualityExpression NEQ RelationalExpression

  309 RelationalExpression: ShiftExpression
  310                     | RelationalExpression LT ShiftExpression
  311                     | RelationalExpression GT ShiftExpression
  312                     | RelationalExpression LEQ ShiftExpression
  313                     | RelationalExpression GREQ ShiftExpression
  314                     | RelationalExpression INSTANCEOF ReferenceType

  315 ShiftExpression: AdditiveExpression
  316                | ShiftExpression LTLT AdditiveExpression
  317                | ShiftExpression GRGR AdditiveExpression
  318                | ShiftExpression GRGRGR AdditiveExpression

  319 AdditiveExpression: MultiplicativeExpression
  320                   | AdditiveExpression ADD MultiplicativeExpression
  321                   | AdditiveExpression SBTR MultiplicativeExpression

  322 MultiplicativeExpression: UnaryExpression
  323                         | MultiplicativeExpression MULT UnaryExpression
  324                         | MultiplicativeExpression DIV UnaryExpression
  325                         | MultiplicativeExpression MOD UnaryExpression

  326 UnaryExpression: PreIncrementExpression
  327                | PreDecrementExpression
  328                | ADD UnaryExpression
  329                | SBTR UnaryExpression
  330                | UnaryExpressionNotPlusMinus

  331 PreIncrementExpression: INCR UnaryExpression

  332 PreDecrementExpression: DECR UnaryExpression

  333 UnaryExpressionNotPlusMinus: PostfixExpression
  334                            | TLD UnaryExpression
  335                            | NT UnaryExpression
  336                            | CastExpression

  337 PostfixExpression: Primary
  338                  | Name
  339                  | PostIncrementExpression
  340                  | PostDecrementExpression

  341 PostIncrementExpression: PostfixExpression INCR

  342 PostDecrementExpression: PostfixExpression DECR

  343 CastExpression: LSMB PrimitiveType Dims RSMB UnaryExpression
  344               | LSMB Expression RSMB UnaryExpressionNotPlusMinus
  345               | LSMB PrimitiveType RSMB UnaryExpression
  346               | LSMB Name Dims RSMB UnaryExpressionNotPlusMinus

  347 ConstantExpression: Expression


Terminals, with rules where they appear

$end (0) 0
error (256)
COMMENT (258)
LITERAL (259) 2
IDENTIFIER (260) 1
ERROR (261)
ABSTRACT (262) 54
ASSERT (263)
BOOLEAN (264) 5
BREAK (265) 228 229
BYTE (266) 9
CASE (267) 200
CATCH (268) 241
CHAR (269) 12
CLASS (270) 60 61 62 63 64 65 66 67
CONST (271)
CONTINUE (272) 230 231
DEFAULT (273) 201
DO (274) 204
DOUBLE (275) 15
ELSE (276) 188 189
ENUM (277)
EXTENDS (278) 68 130
FINALLY (279) 242
FINAL (280) 55
FLOAT (281) 14
FOR (282) 207 208 209 210 211 212 213 214 215 216 217 218 219 220 221
    222
IF (283) 187 188 189
GOTO (284)
IMPLEMENTS (285) 69
IMPORT (286) 43 44
INSTANCEOF (287) 314
INT (288) 11
INTERFACE (289) 126 127 128 129
LONG (290) 13
NATIVE (291) 56
NEW (292) 252 253 266 267 268 269
PACKAGE (293) 40
PRIVATE (294) 52
PROTECTED (295) 51
PUBLIC (296) 50
RETURN (297) 232 233
SHORT (298) 10
STATIC (299) 53 111
STRICTFP (300)
SUPER (301) 124 125 257 264 265
SWITCH (302) 190
SYNCHRONIZED (303) 57 235
THIS (304) 122 123 246
THROWS (305) 106
THROW (306) 234
TRANSIENT (307) 58
TRY (308) 236 237 238
VOID (309) 96 97 98 99
VOLATILE (310) 59
WHILE (311) 202 203 204
ET (312) 86 282
GT (313) 311
LT (314) 310
NT (315) 335
TLD (316) 334
QM (317) 295
COLON (318) 177 178 200 201 295
AR (319)
EQEQ (320) 307
GREQ (321) 313
LEQ (322) 312
NEQ (323) 308
INCR (324) 331 341
DECR (325) 332 342
OR (326) 297
AND (327) 299
ADD (328) 320 328
SBTR (329) 321 329
MULT (330) 323
DIV (331) 324
BOR (332) 301
BAND (333) 305
POW (334) 303
MOD (335) 325
GRGR (336) 317
LTLT (337) 316
GRGRGR (338) 318
PLEQ (339) 286
SBEQ (340) 287
MULEQ (341) 283
ANDEQ (342) 291
OREQ (343) 293
POWEQ (344) 292
DIVEQ (345) 284
MODEQ (346) 285
DGRGR (347) 289
DLRLR (348) 288
TGRGRGR (349) 290
LCB (350) 72 73 118 119 120 121 132 133 140 141 142 143 146 147 191
    192 193 194
RCB (351) 72 73 118 119 120 121 132 133 140 141 142 143 146 147 191
    192 193 194
LSQB (352) 21 22 23 88 102 258 259 272 273 274
RSQB (353) 21 22 23 88 258 259 272 273 274
LSMB (354) 100 101 116 117 122 123 124 125 187 188 189 190 202 203
    204 207 208 209 210 211 212 213 214 215 216 217 218 219 220 221
    222 235 241 247 252 253 260 261 262 263 264 265 343 344 345 346
RSMB (355) 100 101 116 117 122 123 124 125 187 188 189 190 202 203
    204 207 208 209 210 211 212 213 214 215 216 217 218 219 220 221
    222 235 241 247 252 253 260 261 262 263 264 265 343 344 345 346
CMA (356) 71 84 104 108 131 140 141 144 226 255
DCLN (357)
ATR (358)
TDT (359)
FST (360) 27 256 257 262 263 264 265
SCLN (361) 40 43 44 47 81 82 110 122 123 124 125 139 152 176 179 204
    207 208 209 210 211 212 213 214 215 216 217 218 219 220 221 222
    228 229 230 231 232 233 234
DST (362) 44


Nonterminals, with rules where they appear

$accept (108)
    on left: 0
Identifier (109)
    on left: 1, on right: 26 27 60 61 62 63 64 65 66 67 87 100 101
    126 127 128 129 177 178 228 230 256 257 262 263 264 265
Literal (110)
    on left: 2, on right: 245
Type (111)
    on left: 3 4, on right: 81 82 92 93 94 95 105 153
PrimitiveType (112)
    on left: 5 6, on right: 3 21 266 267 343 345
NumericType (113)
    on left: 7 8, on right: 6
IntegralType (114)
    on left: 9 10 11 12 13, on right: 7
FloatingPointType (115)
    on left: 14 15, on right: 8
ReferenceType (116)
    on left: 16 17, on right: 4 314
ClassOrInterfaceType (117)
    on left: 18, on right: 16 19 20 268 269
ClassType (118)
    on left: 19, on right: 68 107 108 252 253
InterfaceType (119)
    on left: 20, on right: 70 71 130 131
ArrayType (120)
    on left: 21 22 23, on right: 17 23
Name (121)
    on left: 24 25, on right: 18 22 27 40 43 44 258 260 261 279 338
    346
SimpleName (122)
    on left: 26, on right: 24 116 117
QualifiedName (123)
    on left: 27, on right: 25
CompilationUnit (124)
    on left: 28 29 30 31 32 33 34 35, on right: 0
ImportDeclarationRec (125)
    on left: 36 37, on right: 28 29 32 33 37
TypeDeclarationRec (126)
    on left: 38 39, on right: 28 29 30 31 39
PackageDeclaration (127)
    on left: 40, on right: 28 30 32 34
ImportDeclaration (128)
    on left: 41 42, on right: 36 37
SingleTypeImportDeclaration (129)
    on left: 43, on right: 41
TypeImportOnDemandDeclaration (130)
    on left: 44, on right: 42
TypeDeclaration (131)
    on left: 45 46 47, on right: 38 39
Modifiers (132)
    on left: 48 49, on right: 49 60 62 64 66 81 92 94 96 98 112 114
    126 128
Modifier (133)
    on left: 50 51 52 53 54 55 56 57 58 59, on right: 48 49
ClassDeclaration (134)
    on left: 60 61 62 63 64 65 66 67, on right: 45
Super (135)
    on left: 68, on right: 60 61 64 65
Interfaces (136)
    on left: 69, on right: 60 61 62 63
InterfaceTypeList (137)
    on left: 70 71, on right: 69 71
ClassBody (138)
    on left: 72 73, on right: 60 61 62 63 64 65 66 67
ClassBodyDeclarationRec (139)
    on left: 74 75, on right: 73 75
ClassBodyDeclaration (140)
    on left: 76 77 78, on right: 74 75
ClassMemberDeclaration (141)
    on left: 79 80, on right: 76
FieldDeclaration (142)
    on left: 81 82, on right: 79 138
VariableDeclarators (143)
    on left: 83 84, on right: 81 82 84 153
VariableDeclarator (144)
    on left: 85 86, on right: 83 84
VariableDeclaratorId (145)
    on left: 87 88, on right: 85 86 88 105
VariableInitializer (146)
    on left: 89 90, on right: 86 144 145
MethodDeclaration (147)
    on left: 91, on right: 80
MethodHeader (148)
    on left: 92 93 94 95 96 97 98 99, on right: 91 139
MethodDeclarator (149)
    on left: 100 101 102, on right: 92 93 94 95 96 97 98 99 102
FormalParameterList (150)
    on left: 103 104, on right: 100 104 116
FormalParameter (151)
    on left: 105, on right: 103 104 241
Throws (152)
    on left: 106, on right: 92 93 96 97 112 113
ClassTypeList (153)
    on left: 107 108, on right: 106 108
MethodBody (154)
    on left: 109 110, on right: 91
StaticInitializer (155)
    on left: 111, on right: 77
ConstructorDeclaration (156)
    on left: 112 113 114 115, on right: 78
ConstructorDeclarator (157)
    on left: 116 117, on right: 112 113 114 115
ConstructorBody (158)
    on left: 118 119 120 121, on right: 112 113 114 115
ExplicitConstructorInvocation (159)
    on left: 122 123 124 125, on right: 118 120
InterfaceDeclaration (160)
    on left: 126 127 128 129, on right: 46
ExtendsInterfaces (161)
    on left: 130 131, on right: 126 127 131
InterfaceBody (162)
    on left: 132 133, on right: 126 127 128 129
InterfaceMemberDeclarationRec (163)
    on left: 134 135, on right: 132 135
InterfaceMemberDeclaration (164)
    on left: 136 137, on right: 134 135
ConstantDeclaration (165)
    on left: 138, on right: 136
AbstractMethodDeclaration (166)
    on left: 139, on right: 137
ArrayInitializer (167)
    on left: 140 141 142 143, on right: 90
VariableInitializerList (168)
    on left: 144 145, on right: 140 142 144
Block (169)
    on left: 146 147, on right: 109 111 165 235 236 237 238 241 242
BlockStatements (170)
    on left: 148 149, on right: 118 119 146 148 199
BlockStatement (171)
    on left: 150 151, on right: 148 149
LocalVariableDeclarationStatement (172)
    on left: 152, on right: 150
LocalVariableDeclaration (173)
    on left: 153, on right: 152 224
Statement (174)
    on left: 154 155 156 157 158 159, on right: 151 177 187 188 202
    204 207 208 209 210 211 212 213 214
StatementNoShortIf (175)
    on left: 160 161 162 163 164, on right: 178 188 189 203 215 216
    217 218 219 220 221 222
StatementWithoutTrailingSubstatement (176)
    on left: 165 166 167 168 169 170 171 172 173 174 175, on right:
    154 160
EmptyStatement (177)
    on left: 176, on right: 166
LabeledStatement (178)
    on left: 177, on right: 155
LabeledStatementNoShortIf (179)
    on left: 178, on right: 161
ExpressionStatement (180)
    on left: 179, on right: 167
StatementExpression (181)
    on left: 180 181 182 183 184 185 186, on right: 179 226 227
IfThenStatement (182)
    on left: 187, on right: 156
IfThenElseStatement (183)
    on left: 188, on right: 157
IfThenElseStatementNoShortIf (184)
    on left: 189, on right: 162
SwitchStatement (185)
    on left: 190, on right: 168
SwitchBlock (186)
    on left: 191 192 193 194, on right: 190
SwitchBlockStatementGroups (187)
    on left: 195 196, on right: 191 193 196
SwitchLabels (188)
    on left: 197 198, on right: 191 192 198 199
SwitchBlockStatementGroup (189)
    on left: 199, on right: 195 196
SwitchLabel (190)
    on left: 200 201, on right: 197 198
WhileStatement (191)
    on left: 202, on right: 158
WhileStatementNoShortIf (192)
    on left: 203, on right: 163
DoStatement (193)
    on left: 204, on right: 169
ForStatement (194)
    on left: 205, on right: 159
ForStatementNoShortIf (195)
    on left: 206, on right: 164
BasicForStatement (196)
    on left: 207 208 209 210 211 212 213 214, on right: 205
BasicForStatementNoShortIf (197)
    on left: 215 216 217 218 219 220 221 222, on right: 206
ForInit (198)
    on left: 223 224, on right: 207 209 211 213 215 217 219 221
ForUpdate (199)
    on left: 225, on right: 207 208 209 210 215 216 217 218
StatementExpressionList (200)
    on left: 226 227, on right: 223 225 226
BreakStatement (201)
    on left: 228 229, on right: 170
ContinueStatement (202)
    on left: 230 231, on right: 171
ReturnStatement (203)
    on left: 232 233, on right: 172
ThrowStatement (204)
    on left: 234, on right: 174
SynchronizedStatement (205)
    on left: 235, on right: 173
TryStatement (206)
    on left: 236 237 238, on right: 175
Catches (207)
    on left: 239 240, on right: 236 238 239
CatchClause (208)
    on left: 241, on right: 239 240
Finally (209)
    on left: 242, on right: 237 238
Primary (210)
    on left: 243 244, on right: 256 262 263 337
PrimaryNoNewArray (211)
    on left: 245 246 247 248 249 250 251, on right: 243 259
ClassInstanceCreationExpression (212)
    on left: 252 253, on right: 186 248
ArgumentList (213)
    on left: 254 255, on right: 122 124 252 255 260 262 264
FieldAccess (214)
    on left: 256 257, on right: 249 280
ArrayAccess (215)
    on left: 258 259, on right: 250 281
MethodInvocation (216)
    on left: 260 261 262 263 264 265, on right: 185 251
ArrayCreationExpression (217)
    on left: 266 267 268 269, on right: 244
DimExprs (218)
    on left: 270 271, on right: 266 267 268 269 270
DimExpr (219)
    on left: 272, on right: 270 271
Dims (220)
    on left: 273 274, on right: 266 268 274 343 346
Expression (221)
    on left: 275, on right: 89 187 188 189 190 202 203 204 207 208
    211 212 215 216 219 220 233 234 235 247 254 255 258 259 272 278
    295 344 347
AssignmentExpression (222)
    on left: 276 277, on right: 275
Assignment (223)
    on left: 278, on right: 180 277
LeftHandSide (224)
    on left: 279 280 281, on right: 278
AssignmentOperator (225)
    on left: 282 283 284 285 286 287 288 289 290 291 292 293, on right:
    278
ConditionalExpression (226)
    on left: 294 295, on right: 276 295
ConditionalOrExpression (227)
    on left: 296 297, on right: 294 295 297
ConditionalAndExpression (228)
    on left: 298 299, on right: 296 297 299
InclusiveOrExpression (229)
    on left: 300 301, on right: 298 299 301
ExclusiveOrExpression (230)
    on left: 302 303, on right: 300 301 303
AndExpression (231)
    on left: 304 305, on right: 302 303 305
EqualityExpression (232)
    on left: 306 307 308, on right: 304 305 307 308
RelationalExpression (233)
    on left: 309 310 311 312 313 314, on right: 306 307 308 310 311
    312 313 314
ShiftExpression (234)
    on left: 315 316 317 318, on right: 309 310 311 312 313 316 317
    318
AdditiveExpression (235)
    on left: 319 320 321, on right: 315 316 317 318 320 321
MultiplicativeExpression (236)
    on left: 322 323 324 325, on right: 319 320 321 323 324 325
UnaryExpression (237)
    on left: 326 327 328 329 330, on right: 322 323 324 325 328 329
    331 332 334 335 343 345
PreIncrementExpression (238)
    on left: 331, on right: 181 326
PreDecrementExpression (239)
    on left: 332, on right: 182 327
UnaryExpressionNotPlusMinus (240)
    on left: 333 334 335 336, on right: 330 344 346
PostfixExpression (241)
    on left: 337 338 339 340, on right: 333 341 342
PostIncrementExpression (242)
    on left: 341, on right: 183 339
PostDecrementExpression (243)
    on left: 342, on right: 184 340
CastExpression (244)
    on left: 343 344 345 346, on right: 336
ConstantExpression (245)
    on left: 347, on right: 200


State 0

    0 $accept: . CompilationUnit $end

    ABSTRACT      shift, and go to state 1
    CLASS         shift, and go to state 2
    FINAL         shift, and go to state 3
    IMPORT        shift, and go to state 4
    INTERFACE     shift, and go to state 5
    NATIVE        shift, and go to state 6
    PACKAGE       shift, and go to state 7
    PRIVATE       shift, and go to state 8
    PROTECTED     shift, and go to state 9
    PUBLIC        shift, and go to state 10
    STATIC        shift, and go to state 11
    SYNCHRONIZED  shift, and go to state 12
    TRANSIENT     shift, and go to state 13
    VOLATILE      shift, and go to state 14
    SCLN          shift, and go to state 15

    $default  reduce using rule 35 (CompilationUnit)

    CompilationUnit                go to state 16
    ImportDeclarationRec           go to state 17
    TypeDeclarationRec             go to state 18
    PackageDeclaration             go to state 19
    ImportDeclaration              go to state 20
    SingleTypeImportDeclaration    go to state 21
    TypeImportOnDemandDeclaration  go to state 22
    TypeDeclaration                go to state 23
    Modifiers                      go to state 24
    Modifier                       go to state 25
    ClassDeclaration               go to state 26
    InterfaceDeclaration           go to state 27


State 1

   54 Modifier: ABSTRACT .

    $default  reduce using rule 54 (Modifier)


State 2

   61 ClassDeclaration: CLASS . Identifier Super Interfaces ClassBody
   63                 | CLASS . Identifier Interfaces ClassBody
   65                 | CLASS . Identifier Super ClassBody
   67                 | CLASS . Identifier ClassBody

    IDENTIFIER  shift, and go to state 28

    Identifier  go to state 29


State 3

   55 Modifier: FINAL .

    $default  reduce using rule 55 (Modifier)


State 4

   43 SingleTypeImportDeclaration: IMPORT . Name SCLN
   44 TypeImportOnDemandDeclaration: IMPORT . Name DST SCLN

    IDENTIFIER  shift, and go to state 28

    Identifier     go to state 30
    Name           go to state 31
    SimpleName     go to state 32
    QualifiedName  go to state 33


State 5

  127 InterfaceDeclaration: INTERFACE . Identifier ExtendsInterfaces InterfaceBody
  129                     | INTERFACE . Identifier InterfaceBody

    IDENTIFIER  shift, and go to state 28

    Identifier  go to state 34


State 6

   56 Modifier: NATIVE .

    $default  reduce using rule 56 (Modifier)


State 7

   40 PackageDeclaration: PACKAGE . Name SCLN

    IDENTIFIER  shift, and go to state 28
